--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "promise": "~3.2.0",
     "mocha": "~1.15.1",
     "gm": "~1.14.1",
-    "imagediff": "~1.0.4"
+    "imagediff": "~1.0.4",
+    "selenium-webdriver": "~2.39.0"
   },
   "peerDependencies": {
     "grunt": "~0.4.2"
